updated skills background and fixed alignment issues

--- a/style_skills.css
+++ b/style_skills.css
@@ -5,9 +5,27 @@
 .limit-right{
     padding-right: 30%;
 }
+.bg_img{
+    background-image: url(skills_bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: left top;
+    height: 550px;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
 
-table {
-    table-layout: auto;
-    border-collapse: collapse;
-    width: 50%;
+.resume-container{
+    text-align: center;
+}
+
+.img_content{
+    text-align: center;
+    padding: 4% 0;
+    color: black;
+}
+.img_content > p{
+    color: black;
 }
